--- a/index.html
+++ b/index.html
@@ -4,40 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Shitbrick-Tool by deavmi</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/deavmi/ShitBrick-Tool">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/deavmi/ShitBrick-Tool/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/deavmi/ShitBrick-Tool/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
-
+      <header>
+        <h1>Shitbrick-Tool</h1>
+        <p>It shits bricks and is free and open-source. No :P :D . Read the description.</p>
+        <p class="view"><a href="https://github.com/deavmi/ShitBrick-Tool">View the Project on GitHub <small>deavmi/ShitBrick-Tool</small></a></p>
+        <ul>
+          <li><a href="https://github.com/deavmi/ShitBrick-Tool/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/deavmi/ShitBrick-Tool/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/deavmi/ShitBrick-Tool">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
       <section>
-        <div id="title">
-          <h1>Shitbrick-Tool</h1>
-          <p>It shits bricks and is free and open-source. No :P :D . Read the description.</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/deavmi">deavmi</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
         <h1>
 <a name="shitbrick-tool" class="anchor" href="#shitbrick-tool"><span class="octicon octicon-link"></span></a>ShitBrick-Tool</h1>
 
@@ -50,11 +39,14 @@
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
 <ul>
-<li>Download ShitBrick-Tool v1.0.0.0</li>
-</ul>
+<li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.0/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.0</a></li>
+</ul><p>I WILL NEVER AGAIN SUPPORT THIS PROJECT. IT IS NOT USEFUL AT ALL, <strong>EXCEPT</strong> for those that want to fix old versions of my applications.</p>
       </section>
-
     </div>
+    <footer>
+      <p>Project maintained by <a href="https://github.com/deavmi">deavmi</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
