- Commited with Jackalope (http://jackalope.me)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Shitbrick-Tool | SHitting bricks on references since 1931.</h1>
+        <h1>Shitbrick-Tool | Shitting bricks on references since 1931.</h1>
         <p>It shits bricks and is free and open-source. No :P :D . Read the description.</p>
         <p class="view"><a href="https://github.com/deavmi/ShitBrick-Tool">View the Project on GitHub <small>deavmi/ShitBrick-Tool</small></a></p>
         <ul>
