--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Shitbrick-Tool by deavmi</title>
+    <title>Shitbrick-Tool | Shitting bricks on references since 1931.</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Shitbrick-Tool | Shitting bricks on references since 1931.</h1>
+        <h1>Shitbrick-Tool</h1>
         <p>It shits bricks and is free and open-source. No :P :D . Read the description.</p>
         <p class="view"><a href="https://github.com/deavmi/ShitBrick-Tool">View the Project on GitHub <small>deavmi/ShitBrick-Tool</small></a></p>
         <ul>
