--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Shitbrick-Tool | Shitting bricks on references since 1931.</title>
+    <title>Shitbrick-Tool by deavmi</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -40,7 +40,10 @@
 
 <ul>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.0/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.0</a></li>
-</ul><p>I WILL NEVER AGAIN SUPPORT THIS PROJECT. IT IS NOT USEFUL AT ALL, <strong>EXCEPT</strong> for those that want to fix old versions of my applications.</p>
+<li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.2/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.2</a></li>
+</ul><p><strong>NOTICE:</strong> We skipped v1.0.0.1 because I forgot to update version number in that release. Therefore that kinda' counts. Yah.</p>
+
+<p><strong>NOTICE:</strong> I WILL NEVER AGAIN SUPPORT THIS PROJECT. IT IS NOT USEFUL AT ALL, <strong>EXCEPT</strong> for those that want to fix old versions of my applications.</p>
       </section>
     </div>
     <footer>
