Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <ul>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.0/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.0</a></li>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.2/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.2</a></li>
+<li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.3/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.3</a></li>
 </ul><p><strong>NOTICE:</strong> We skipped v1.0.0.1 because I forgot to update version number in that release. Therefore that kinda' counts. Yah.</p>
 
 <p><strong>NOTICE:</strong> I WILL NEVER AGAIN SUPPORT THIS PROJECT. IT IS NOT USEFUL AT ALL, <strong>EXCEPT</strong> for those that want to fix old versions of my applications.</p>
