--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.0/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.0</a></li>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.2/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.2</a></li>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.3/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.3</a></li>
+<li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.4/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.4</a></li>
 </ul><p><strong>NOTICE:</strong> We skipped v1.0.0.1 because I forgot to update version number in that release. Therefore that kinda' counts. Yah.</p>
 
 <p><strong>NOTICE:</strong> I WILL NEVER AGAIN SUPPORT THIS PROJECT. IT IS NOT USEFUL AT ALL, <strong>EXCEPT</strong> for those that want to fix old versions of my applications.</p>
@@ -52,6 +53,16 @@
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-46364343-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
