Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Shitbrick-Tool by deavmi</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Shitbrick-Tool : It shits bricks and is free and open-source. No :P :D . Read the description." />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Shitbrick-Tool</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Shitbrick-Tool</h1>
-        <p>It shits bricks and is free and open-source. No :P :D . Read the description.</p>
-        <p class="view"><a href="https://github.com/deavmi/ShitBrick-Tool">View the Project on GitHub <small>deavmi/ShitBrick-Tool</small></a></p>
-        <ul>
-          <li><a href="https://github.com/deavmi/ShitBrick-Tool/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/deavmi/ShitBrick-Tool/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/deavmi/ShitBrick-Tool">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/deavmi/ShitBrick-Tool">View on GitHub</a>
+
+          <h1 id="project_title">Shitbrick-Tool</h1>
+          <h2 id="project_tagline">It shits bricks and is free and open-source. No :P :D . Read the description.</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/deavmi/ShitBrick-Tool/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/deavmi/ShitBrick-Tool/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="shitbrick-tool" class="anchor" href="#shitbrick-tool"><span class="octicon octicon-link"></span></a>ShitBrick-Tool</h1>
 
@@ -43,16 +47,21 @@
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.2/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.2</a></li>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.3/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.3</a></li>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.4/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.4</a></li>
+<li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/V1.0.0.5/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.5</a></li>
 </ul><p><strong>NOTICE:</strong> We skipped v1.0.0.1 because I forgot to update version number in that release. Therefore that kinda' counts. Yah.</p>
 
 <p><strong>NOTICE:</strong> I WILL NEVER AGAIN SUPPORT THIS PROJECT. IT IS NOT USEFUL AT ALL, <strong>EXCEPT</strong> for those that want to fix old versions of my applications.</p>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/deavmi">deavmi</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Shitbrick-Tool maintained by <a href="https://github.com/deavmi">deavmi</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -63,6 +72,7 @@
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
