Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
 <h2>
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
+<h3>
+<a name="latest-stable-build" class="anchor" href="#latest-stable-build"><span class="octicon octicon-link"></span></a>Latest stable build</h3>
+
+<ul>
+<li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/V1.0.0.6/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.6</a></li>
+</ul><h3>
+<a name="older-unstable-builds" class="anchor" href="#older-unstable-builds"><span class="octicon octicon-link"></span></a>Older unstable builds</h3>
+
 <ul>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.0/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.0</a></li>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.2/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.2</a></li>
