Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Shitbrick-Tool : It shits bricks and is free and open-source. No :P :D . Read the description." />
+    <meta name="description" content="ShitBrick-Tool : It shits bricks and is free and open-source. No :P :D . Read the description." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Shitbrick-Tool</title>
+    <title>ShitBrick-Tool</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/deavmi/ShitBrick-Tool">View on GitHub</a>
 
-          <h1 id="project_title">Shitbrick-Tool</h1>
+          <h1 id="project_title">ShitBrick-Tool</h1>
           <h2 id="project_tagline">It shits bricks and is free and open-source. No :P :D . Read the description.</h2>
 
             <section id="downloads">
@@ -43,12 +43,23 @@
 <a name="downloads" class="anchor" href="#downloads"><span class="octicon octicon-link"></span></a>Downloads</h2>
 
 <h3>
+<a name="application" class="anchor" href="#application"><span class="octicon octicon-link"></span></a>Application</h3>
+
+<h3>
 <a name="latest-stable-build" class="anchor" href="#latest-stable-build"><span class="octicon octicon-link"></span></a>Latest stable build</h3>
+
+<p><em>Automated version of the ShitBrick-Tool</em></p>
+
+<ul>
+<li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.0-automated/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.0</a></li>
+</ul><p><em>Manual version of the ShitBrick-Tool</em></p>
 
 <ul>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.6/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.6</a></li>
 </ul><h3>
 <a name="older-unstable-builds" class="anchor" href="#older-unstable-builds"><span class="octicon octicon-link"></span></a>Older unstable builds</h3>
+
+<p><em>Manual version of the ShitBrick-Tool</em></p>
 
 <ul>
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/v1.0.0.0/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.0</a></li>
@@ -58,14 +69,40 @@
 <li><a href="https://github.com/deavmi/ShitBrick-Tool/releases/download/V1.0.0.5/ShitBrick.Tool.exe">Download ShitBrick-Tool v1.0.0.5</a></li>
 </ul><p><strong>NOTICE:</strong> We skipped v1.0.0.1 because I forgot to update version number in that release. Therefore that kinda' counts. Yah.</p>
 
-<p><strong>NOTICE:</strong> I WILL NEVER AGAIN SUPPORT THIS PROJECT. IT IS NOT USEFUL AT ALL, <strong>EXCEPT</strong> for those that want to fix old versions of my applications.</p>
+<h3>
+<a name="source-code" class="anchor" href="#source-code"><span class="octicon octicon-link"></span></a>Source code</h3>
+
+<p>To download the latest source code please <a href="https://github.com/deavmi/ShitBrick-Tool/zipball/master">click this link</a>. Default format is ".ZIP" but you may choose to download a ".TAR" version of the source code <a href="https://github.com/deavmi/ShitBrick-Tool/tarball/master">here</a>.</p>
+
+<h2>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
+
+<p>ShitBrick-Tool is registered under GNU's General Public License version three (GPLv3), your copy of the license can be obtained <a href="http://gnu.org/licenses/gpl.txt">here</a>.</p>
+
+<h2>
+<a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h2>
+
+<p>Developers</p>
+
+<ul>
+<li> Deavmi - <a href="https://deavmi.github.io/Deavmi">Website</a> / <a href="http://twitter.com/deavmi">Twitter</a> / <a href="mailto:tristankildaire@gmail.com">Send an email</a>
+</li>
+</ul><h2>
+<a name="feedback" class="anchor" href="#feedback"><span class="octicon octicon-link"></span></a>Feedback</h2>
+
+<p>For feature suggestions or bug reports please drop an email by me: <a href="mailto:tristankildaire@gmail.com">tristankildaire@gmail.com</a></p>
+
+<h2>
+<a name="support-these-projects-and-campaigns" class="anchor" href="#support-these-projects-and-campaigns"><span class="octicon octicon-link"></span></a>Support these projects and campaigns</h2>
+
+<p><a href="http://gnu.org"><img src="http://deavmi.github.io/Deavmi/images/support-them/gnubanner-2.png" alt="Support the GNU/Linux project"></a> <a href="http://www.defectivebydesign.org/no-drm-in-html5"><img src="http://deavmi.github.io/Deavmi/images/support-them/hollywebshare.jpeg" alt="Stop the Hollyweb! No DRM in HTML5."></a></p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Shitbrick-Tool maintained by <a href="https://github.com/deavmi">deavmi</a></p>
+        <p class="copyright">ShitBrick-Tool maintained by <a href="https://github.com/deavmi">deavmi</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
