--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="ShitBrick-Tool : It shits bricks and is free and open-source. No :P :D . Read the description." />
+    <meta name="description" content="ShitBrick-Tool : It shits bricks and is free and open-source = awesome. No, read the overview description." />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/deavmi/ShitBrick-Tool">View on GitHub</a>
 
           <h1 id="project_title">ShitBrick-Tool</h1>
-          <h2 id="project_tagline">It shits bricks and is free and open-source. No :P :D . Read the description.</h2>
+          <h2 id="project_tagline">It shits bricks and is free and open-source = awesome. No, read the overview description.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/deavmi/ShitBrick-Tool/zipball/master">Download this project as a .zip file</a>
