--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <p>Developers</p>
 
 <ul>
-<li> Deavmi - <a href="https://deavmi.github.io/Deavmi">Website</a> / <a href="http://twitter.com/deavmi">Twitter</a> / <a href="mailto:tristankildaire@gmail.com">Send an email</a>
+<li> Deavmi - <a href="http://deavmi.github.io/Deavmi">Website</a> / <a href="http://twitter.com/deavmi">Twitter</a> / <a href="mailto:tristankildaire@gmail.com">Send an email</a>
 </li>
 </ul><h2>
 <a name="feedback" class="anchor" href="#feedback"><span class="octicon octicon-link"></span></a>Feedback</h2>
